--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
     <title>Portfolio-website</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    
+<body class="open-sans-regular">
+    <header>
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <ul>
+            <li><a class="dark-2" href="">Portfolio</a></li>
+            <li><a class="dark-2" href="">Blog</a></li>
+            <li><a class="dark-2" href=""><button class="btn-primary">Hire Me</button></a></li>
+        </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings">Hi, I  am</h4>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-secondary">Contact</button>
+            </div>
+            <img class="banner-profile-pic" src="./assets/hardy.png" alt="">
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
