about us section added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-regular">
-    <header>
+    <header class="bg-primary">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -28,6 +28,31 @@
         </div>
     </header>
     <main>
+        <section class="about bg-primary">
+            <div class="about-content">
+                <img style="width: 100px;" src="./assets/Oval 1@2x.png" alt="">
+                <h2 class="section-title">About Us</h2>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="items-container">
+                <div class="item-container">
+                    <p class="item-title">Name:</p>
+                    <h4 class="item-description">Mary Hardy </h4>
+                </div>
+                <div class="item-container">
+                    <p class="item-title">Email:</p>
+                    <h4 class="item-description">info@gmail.com</h4>
+                </div>
+                <div class="item-container">
+                    <p class="item-title">Date of Birth:</p>
+                    <h4 class="item-description">11 November 1987</h4>
+                </div>
+                <div class="item-container">
+                    <p class="item-title">From:</p>
+                    <h4 class="item-description">Los Angeles, USA</h4>
+                </div>
+            </div>
+            </div>
+        </section>
 
     </main>
     <footer>
