--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
     </header>
     <main>
+        <!-- About Us -->
         <section class="about bg-primary">
             <div class="about-content">
                 <img style="width: 100px;" src="./assets/Oval 1@2x.png" alt="">
@@ -53,8 +54,35 @@
             </div>
             </div>
         </section>
-
+        <!-- What I do -->
+         <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick <br> overview of my main technical skill sets and technologies i use. Want to find out more about my experience? <br>Check out my online resume and project portfolio.</p> 
+            <div class="cards-area">
+                <div class="card-content">
+                    <img src="./assets/icons/js.png" alt="">
+                    <h4 class="card-title">Vanilla JavaScript</h4>
+                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card-content">
+                    <img src="./assets/icons/react.png" alt="">
+                    <h4 class="card-title">React</h4>
+                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card-content">
+                    <img src="./assets/icons/nodejs.png" alt="">
+                    <h4 class="card-title">Node.js</h4>
+                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="card-content">
+                    <img src="./assets/icons/mongo.png" alt="">
+                    <h4 class="card-title">MongoDB</h4>
+                    <p class="card-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+         </section>
     </main>
+
     <footer>
 
     </footer>
