Resume Summary added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-regular">
+    <!-- Nav Bar and Banner -->
     <header class="bg-primary">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
@@ -81,6 +82,51 @@
                 </div>
             </div>
          </section>
+         <!-- Resume Summary -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="edu-exp">
+                <div class="my-education">
+                    <h3 class="education-title">My Education</h3>
+                    <div class="education-container">
+                        <h4 class="certificate-subject">Master in Computer Engineering</h4>
+                        <p class="institute">Harvard University / 2015 - 2017</p>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="education-container">
+                        <h4 class="certificate-subject">Master in Computer Engineering</h4>
+                        <p class="institute">Harvard University / 2015 - 2017</p>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="education-container-l">
+                        <h4 class="certificate-subject">Master in Computer Engineering</h4>
+                        <p class="institute">Harvard University / 2015 - 2017</p>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="my-experience">
+                    <h3 class="experience-title">My Experience</h3>
+                    <div class="experience-container">
+                    <h4 class="certificate-subject">Sr. Font End Developer</h4>
+                    <p class="institute">Apple Inc / 2020 - Current</p>
+                    <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="experience-container">
+                    <h4 class="certificate-subject">Jr. Font End Developer</h4>
+                    <p class="institute">Dribbble Inc / 2018 - 2022</p>
+                    <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="experience-container-l">
+                    <h4 class="certificate-subject">HTML Developer</h4>
+                    <p class="institute">Adobe Inc / 2017 - 2018</p>
+                    <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-button">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
     </main>
 
     <footer>
