footer section added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <img class="banner-profile-pic" src="./assets/hardy.png" alt="">
         </div>
     </header>
+    <!-- About Us, What I Do and Resume Summary -->
     <main>
         <!-- About Us -->
         <section class="about bg-primary">
@@ -129,8 +130,31 @@
         </section>
     </main>
 
-    <footer>
-
+    <!-- Let's Connect and Let's Message -->
+    <footer class="footer bg-primary">
+        <div class="social">
+            <div class="connect">
+                <h3 class="section-title">Let's Connect</h3>
+                <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <ul class="social-icons">
+                    <li><a href="#"><img src="./assets/icons/facebook.png" alt=""></a></li>
+                    <li><a href="#"><img src="./assets/icons/twitter.png" alt=""></a></li>
+                    <li><a href="#"><img src="./assets/icons/insta.png" alt=""></a></li>
+                    
+                </ul>
+            </div>
+            <div class="message">
+                <h3 class="section-title">Let’s Message me</h3>
+                <form action="#">
+                    <input type="text" name="name" id="name" placeholder="Your name">
+                    <input type="email" name="email" id="email" placeholder="Your email">
+                    <textarea name="message" id="message" placeholder="Message" rows="10" cols="20"></textarea>
+                    <button class="btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
     </footer>
+    
 </body>
+
 </html>
