rsponsive started and what-i-do section done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="open-sans-regular">
     <!-- Nav Bar and Banner -->
-    <header class="bg-primary">
+    <header class="bg-primary hide">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -31,7 +31,7 @@
     <!-- About Us, What I Do and Resume Summary -->
     <main>
         <!-- About Us -->
-        <section class="about bg-primary">
+        <section class="about bg-primary hide">
             <div class="about-content">
                 <img style="width: 100px;" src="./assets/Oval 1@2x.png" alt="">
                 <h2 class="section-title">About Us</h2>
@@ -84,7 +84,7 @@
             </div>
          </section>
          <!-- Resume Summary -->
-        <section class="resume">
+        <section class="resume hide">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="edu-exp">
                 <div class="my-education">
@@ -131,7 +131,7 @@
     </main>
 
     <!-- Let's Connect and Let's Message -->
-    <footer class="footer bg-primary">
+    <footer class="footer bg-primary hide">
         <div class="social">
             <div class="connect">
                 <h3 class="section-title">Let's Connect</h3>
