--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </section>
         <!-- What I do -->
-         <section class="what-i-do">
+         <section class="what-i-do hide">
             <h3 class="section-title">What I do</h3>
             <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick <br> overview of my main technical skill sets and technologies i use. Want to find out more about my experience? <br>Check out my online resume and project portfolio.</p> 
             <div class="cards-area">
@@ -84,7 +84,7 @@
             </div>
          </section>
          <!-- Resume Summary -->
-        <section class="resume hide">
+        <section class="resume">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="edu-exp">
                 <div class="my-education">
