about us section done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- About Us, What I Do and Resume Summary -->
     <main>
         <!-- About Us -->
-        <section class="about bg-primary hide">
+        <section class="about bg-primary">
             <div class="about-content">
                 <img style="width: 100px;" src="./assets/Oval 1@2x.png" alt="">
                 <h2 class="section-title">About Us</h2>
@@ -84,7 +84,7 @@
             </div>
          </section>
          <!-- Resume Summary -->
-        <section class="resume">
+        <section class="resume hide">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="edu-exp">
                 <div class="my-education">
