footer section done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- About Us, What I Do and Resume Summary -->
     <main>
         <!-- About Us -->
-        <section class="about bg-primary">
+        <section class="about bg-primary hide">
             <div class="about-content">
                 <img style="width: 100px;" src="./assets/Oval 1@2x.png" alt="">
                 <h2 class="section-title">About Us</h2>
@@ -131,10 +131,10 @@
     </main>
 
     <!-- Let's Connect and Let's Message -->
-    <footer class="footer bg-primary hide">
+    <footer class="footer bg-primary">
         <div class="social">
             <div class="connect">
-                <h3 class="section-title">Let's Connect</h3>
+                <h3 class="section-title">Let’s Connect</h3>
                 <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
                 <ul class="social-icons">
                     <li><a href="#"><img src="./assets/icons/facebook.png" alt=""></a></li>
