--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="open-sans-regular">
     <!-- Nav Bar and Banner -->
-    <header class="bg-primary hide">
+    <header class="bg-primary">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -31,7 +31,7 @@
     <!-- About Us, What I Do and Resume Summary -->
     <main>
         <!-- About Us -->
-        <section class="about bg-primary hide">
+        <section class="about bg-primary">
             <div class="about-content">
                 <img style="width: 100px;" src="./assets/Oval 1@2x.png" alt="">
                 <h2 class="section-title">About Us</h2>
@@ -57,7 +57,7 @@
             </div>
         </section>
         <!-- What I do -->
-         <section class="what-i-do hide">
+         <section class="what-i-do">
             <h3 class="section-title">What I do</h3>
             <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick <br> overview of my main technical skill sets and technologies i use. Want to find out more about my experience? <br>Check out my online resume and project portfolio.</p> 
             <div class="cards-area">
@@ -84,7 +84,7 @@
             </div>
          </section>
          <!-- Resume Summary -->
-        <section class="resume hide">
+        <section class="resume">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="edu-exp">
                 <div class="my-education">
